k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api
        spec:
            containers:
                -   name: api
                    # todo change this to the private image
                    image: jjaquez/odyssey:server
                    imagePullPolicy: Always
                    ports:
                        -   containerPort: 8080
