k8s/shopify-scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shopify-scraper-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: shopify-scraper
    template:
        metadata:
            labels:
                component: shopify-scraper
        spec:
            containers:
                -   name: shopify-scraper
                    # todo change this to the private image
                    image: jjaquez/odyssey:scraper
                    imagePullPolicy: Always
                    ports:
                        -   containerPort: 8080
