k8s/shopify-scraper-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: shopify-scraper-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: shopify-scraper
    ports:
     -   port: 5000
         targetPort: 5000
